manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "awadkube-7134"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "awadkube-7134"
  template:
    metadata:
      labels:
        app: "awadkube-7134"
    spec:
      containers:
        - name: "awadkube-7134"
          image: "awadrepo.azurecr.io/awadkube"
          ports:
          - containerPort: 80
